<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/navi_home"
            android:title="@string/home"
            android:icon="@drawable/home"/>
        <item android:id="@+id/navi_list"
            android:title="@string/navi_list"
            android:icon="@drawable/list"/>
    </group>

    <item android:title="My account">
        <menu>
            <item android:id="@+id/navi_sign_in"
                android:title="@string/navi_sign_in"
                android:icon="@drawable/sign_in"/>
            <item android:id="@+id/navi_sign_out"
                android:title="@string/navi_sign_out"
                android:icon="@drawable/sign_out"/>
        </menu>

    </item>
</menu>