<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/purple_500"
    android:orientation="vertical"
    android:layout_margin="16dp">

    <TextView
        android:text="@string/not_login"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:padding="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:background="@drawable/bg_purple_topleft_topright_corners_16dp"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_check_user1"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/dialog_check_user2"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/dialog_check_user3"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <LinearLayout
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/dialog_checkUser_btn_cancel"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginRight="5dp"
                android:background="@drawable/ripple_effect_btn_purple"
                android:text="@string/cancel"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/dialog_checkUser_btn_SignIn"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/ripple_effect_btn_purple"
                android:text="@string/sign_in"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </LinearLayout>




</LinearLayout>