<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradients_blue_to_purple"
    android:tag="Frag_home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/layout_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="𝓣𝓱𝓮 𝓹𝓪𝓼𝓼𝔀𝓸𝓻𝓭"
            android:textColor="@color/black"
            android:textSize="52sp" />


        <TextView
            android:id="@+id/btn_instruction"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/ripple_effect_btn_purple"
            android:gravity="center"
            android:text="@string/instruction"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_input_keyCode"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="20dp"
            android:hint="key code"
            android:textColor="@color/black"
            app:counterEnabled="true"
            app:counterMaxLength="40"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_input_keyCode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/round_corners_purple_700"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="24sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/show_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_corners_purple_700"
            android:textColor="@color/black"
            android:textSize="24sp" />


        <LinearLayout
            android:id="@+id/layout_password"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/btn_generate_password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.8"
                android:background="@drawable/ripple_effect_btn_purple"
                android:gravity="center"
                android:text="@string/generate_password"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/process_bar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:src="@drawable/process_bar"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/btn_copy_password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.2"
                android:background="@drawable/ripple_effect_btn_purple"
                android:src="@drawable/copy_button" />

        </LinearLayout>


        <TextView
            android:id="@+id/show_account"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_corners_purple_700"
            android:textColor="@color/black"
            android:textSize="24sp" />


        <LinearLayout
            android:id="@+id/layout_account"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/btn_generate_account"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.8"
                android:background="@drawable/ripple_effect_btn_purple"
                android:gravity="center"
                android:text="@string/generate_account"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/process_bar2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:src="@drawable/process_bar"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/btn_copy_account"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.2"
                android:background="@drawable/ripple_effect_btn_purple"
                android:src="@drawable/copy_button" />

        </LinearLayout>

        <TextView
            android:id="@+id/btn_copy_all"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1.8"
            android:background="@drawable/ripple_effect_btn_purple"
            android:gravity="center"
            android:text="Copy pass and account"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>